<resources>
    <string name="app_name">Song saver</string>
    <string name="song">Song Title</string>
    <string name="enterSong">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="enterSinger">Enter singers` name here</string>
    <string name="year">Year</string>
    <string name="enterYear">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="stardf">*If unselected, defaulted to one star.</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="back">RETURN</string>
    <string name="show5">SHOW ALL SONGS WITH FIVE STARS</string>
    <string name="showN">SHOW SONGS</string>
    <string name="showall">SHOW ALL SONGS</string>

    <string-array name="spinnerItems">
        <item>All</item>
        <item>1998</item>
        <item>2002</item>
        <item>2015</item>
    </string-array>
</resources>